corrected the url in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p><q>A ship in port is safe, but that's not what ships are built for.</q></p>
       </div>
     </div>
-    <footer>If you have more time,you should read more about this incredible human being on her <a href="https://en.wikipedia.org/wiki/Grace_Hoppe" target="_blank"><em>Wikipedia entry</em></a></footer>
+    <footer>If you have more time,you should read more about this incredible human being on her <a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank"><em>Wikipedia entry</em></a></footer>
     <hr>
     <center><small><em>BY CHAMILA GUNATHILAKE</em></small></center>
   </div>
