added img slider and color

--- a/index.html
+++ b/index.html
@@ -13,54 +13,107 @@
 <body>
   <div id="main">
     <h1 id="title">Grace Hopper</h1>
-    <center><span>computer scientist</span></center>
-    <div id="img-div">
-
-      <img src="grace.jpg" alt="" id="image">
-      <span><em>Birth: Dec 09 1906</em></span>
-      <span><em>Death: Jan 01 1992</em></span><br>
-      <span>Parents: Mary Campbell Van Horne Murray (Mother) Walter Fletcher Murray (Father)</span>
-      <h3 id="img-caption"><em> admiral grace hopper</em></h3>
-    </div>
-    <div id="tribute-info">
-      <h2>Timeline</h2>
-      <ul>
-
-        <li><span>1934:</span>
-          <p>In 1934, she earned a Ph.D. in mathematics from Yale under the direction of Øystein Ore.</p>
-        </li>
-
-        <li><span>1959:</span>
-          <p>In 1959, she participated in the CODASYL consortium, which consulted Hopper to guide them in creating a machine-independent programming language.</p>
-        </li>
-
-        <li><span>1966:</span>
-          <p> In accordance with Navy attrition regulations, Hopper retired from the Naval Reserve with the rank of commander at age 60 at the end of 1966.</p>
-        </li>
-
-        <li><span>1971:</span>
-          <p> The annual Grace Murray Hopper Award for Outstanding Young Computer Professionals was established in 1971 by the Association for Computing Machinery.</p>
-        </li>
-
-        <li><span>1986:</span>
-          <p>She retired from the Navy in 1986 and found work as a consultant for the Digital Equipment Corporation, sharing her computing experiences.</p>
-        </li>
-
-        <li><span> 1988:</span>
-          <p>Grace Hopper was awarded IEEE Emanuel R. Piore Award in 1988.</p>
-        </li>
-      </ul>
-      <div class="quotes">
-        <h3 class="quotes-header">famous quotes by grace hopper</h3>
-
-        <p><q>I handed my passport to the immigration officer, and he looked at it and looked at me and said, 'What are you?'</q></p>
-        <p><q>No computer is ever going to ask a new, reasonable question. It takes trained people to do that.</q></p>
-        <p><q>It is often easier to ask for forgiveness than to ask for permission.</q></p>
-        <p><q>A ship in port is safe, but that's not what ships are built for.</q></p>
-      </div>
-    </div>
-    <footer>If you have more time,you should read more about this incredible human being on her <a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank"><em>Wikipedia entry</em></a></footer>
-    <hr>
-    <center><small><em>BY CHAMILA GUNATHILAKE</em></small></center>
+    <center>
+      <h2>Admiral Of The Cyber Sea</h2>
+    </center>
   </div>
-</body></html>
+
+  <div class="wrapper">
+    <div class="slideshow-container">
+
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 4</div>
+        <img src="images/grace.jpg" style="width:100%">
+        <div class="text">
+          <p><em>Birth: Dec 09 1906</em></p>
+          <p><em>Death: Jan 01 1992</em></p>
+        </div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 4</div>
+        <img src="images/grace3.jpg" style="width:100%">
+        <div class="text">Computer Scientist</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">3 /4 </div>
+        <img src="images/grace4.jpg" style="width:100%">
+        <div class="text">Admiral Grace Hopper</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext">4 / 4</div>
+        <img src="images/grace5.jpg" style="width:100%">
+        <div class="text">
+          <p><em>Parents: Marry Campbell Van Horne Murray (Mother)</em></p>
+          <p><em>Walter Fletcher Murray (Father)</em></p>
+        </div>
+      </div>
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+  <div id="tribute-info">
+    <h2>Timeline</h2>
+    <ul>
+
+      <li><span>1934:</span>
+        <p>In 1934, she earned a Ph.D. in mathematics from Yale under the direction of Øystein Ore.</p>
+      </li>
+
+      <li><span>1959:</span>
+        <p>In 1959, she participated in the CODASYL consortium, which consulted Hopper to guide them in creating a machine-independent programming language.</p>
+      </li>
+
+      <li><span>1966:</span>
+        <p> In accordance with Navy attrition regulations, Hopper retired from the Naval Reserve with the rank of commander at age 60 at the end of 1966.</p>
+      </li>
+
+      <li><span>1971:</span>
+        <p> The annual Grace Murray Hopper Award for Outstanding Young Computer Professionals was established in 1971 by the Association for Computing Machinery.</p>
+      </li>
+
+      <li><span>1986:</span>
+        <p>She retired from the Navy in 1986 and found work as a consultant for the Digital Equipment Corporation, sharing her computing experiences.</p>
+      </li>
+
+      <li><span> 1988:</span>
+        <p>Grace Hopper was awarded IEEE Emanuel R. Piore Award in 1988.</p>
+      </li>
+    </ul>
+    <div class="quotes">
+      <h3 class="quotes-header">famous quotes by grace hopper</h3>
+
+      <p><q>I handed my passport to the immigration officer, and he looked at it and looked at me and said, 'What are you?'</q></p>
+      <p><q>No computer is ever going to ask a new, reasonable question. It takes trained people to do that.</q></p>
+      <p><q>It is often easier to ask for forgiveness than to ask for permission.</q></p>
+      <p><q>A ship in port is safe, but that's not what ships are built for.</q></p>
+    </div>
+  </div>
+  <footer>If you have more time,you should read more about this incredible human being on her <a href="https://en.wikipedia.org/wiki/Grace_Hopper" target="_blank"><em>Wikipedia entry</em></a></footer>
+  <hr>
+  <center><small><em><strong>BY CHAMILA GUNATHILAKE</strong></em></small></center>
+  </div>
+  <script src="index.js"></script>
+</body>
+
+</html>
