--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Full-width images with number and caption text -->
       <div class="mySlides fade">
         <div class="numbertext">1 / 4</div>
-        <img src="images/grace.jpg" style="width:100%">
+        <img src="images/grace1.jpg" style="width:100%">
         <div class="text">
           <p><em>Birth: Dec 09 1906</em></p>
           <p><em>Death: Jan 01 1992</em></p>
